--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 cover: false
 about: 'about.html'
-logo: /assets/images/profile.png
+logo: /assets/images/headimg.jpg
 ---
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
